--- a/fontend/src/app/user/sanpham/sanpham.component.html
+++ b/fontend/src/app/user/sanpham/sanpham.component.html
@@ -43,7 +43,7 @@
             Sản phẩm đang được cập nhật.
         </div>
       </div>
-<<ng-template #productSection>
+<ng-template #productSection>
   <div class="row">
     <div class="col-12 col-sm-6 col-lg-3 p-2" *ngFor="let product of products; let i = index">
       <div class="p-4 surface-card border-round align-items-start">
