--- a/fontend/src/app/user/chitietsanpham/chitietsanpham.component.html
+++ b/fontend/src/app/user/chitietsanpham/chitietsanpham.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-6">
           <div *ngIf="product">
-            <img [src]="'http://localhost:3000' + product.productImage[0]" alt="{{ product.productName }}" style="width: 100%;">
+            <img [src]="'http://localhost:3000' + product.productImage[0]" alt="{{ product.productName }}" style="width: 100%; height: 357px;">
           </div>
           
           </div>
