--- a/fontend/src/app/user/user.component.html
+++ b/fontend/src/app/user/user.component.html
@@ -10,7 +10,7 @@
     <div class="col-lg-8 col-2">
       <ul class="navbar-nav mr-auto justify-content-center">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [style.color]="isActive('/user') ? '#CC7F45' : 'inherit'" routerLink="home">TRANG CHỦ <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [style.color]="isActive('/user/home') ? '#CC7F45' : 'inherit'" routerLink="home">TRANG CHỦ <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [style.color]="isActive('/user/gioithieu') ? '#CC7F45' : 'inherit'" routerLink="gioithieu">GIỚI THIỆU</a>
@@ -60,9 +60,59 @@
     </div>
 
     <form class="form-inline my-2 my-lg-0">
-      <i><a class="pi pi-search text-decoration-none"></a></i>
+      <i><a class="pi pi-search text-decoration-none" (click)="sidebarVisible = true"></a></i>
+      <p-sidebar [(visible)]="sidebarVisible" position="right" filterBy="name" filterPlaceholder="Filter by name">
+        <form>
+          <div class="row mb-3">
+            <div class="col-md-12">
+              <input type="text" [(ngModel)]="searchTerm" name="search" placeholder="Nhập tên sản phẩm" class="form-control" (keyup.enter)="search()" style="width: 260px; border-color: black;">
+            </div>
+          </div>
+        </form>
+        
+
+       <h6>Sản phẩm được tìm nhiều nhất</h6>
+       <hr style="border: 2px solid #CC7F45; width: 50%; color: #CC7F45; border-color:#CC7F45 ;">
+
+
+        <div class="row">
+          <div class="col-12 p-2">
+            <div class="d-flex flex-wrap">
+              <div *ngFor="let product of filteredProducts; let i = index" class="p-2">
+                <div class="surface-card border-round align-items-start d-flex">
+                  <div class="col-4">
+                    <a [routerLink]="['/user/chitietsanpham', product._id]">
+                      <img style="width: 80px; height: 60px; object-fit: cover;"
+                           class="shadow border-round"
+                           [src]="'http://localhost:3000' + product.productImage[0]"
+                           [alt]="product.productName" />
+                    </a>
+                  </div>
+                  
+                  <div class="col-8 ml-2">
+                    <div class="font-weight-bold product_name" >
+                      <a [routerLink]="['/user/chitietsanpham', product._id]" style="color:black !important; font-size: 10px;">
+                        {{ product.productName }}
+                      </a>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <span class="font-weight-bold" style="color:red; font-size: 10px;">
+                        {{ product.productPrice | number:'1.0-2' }} VND
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        
+        
+      </p-sidebar>
+
       <div class="dropdown">
-        <i><a class="pi pi-user text-decoration-none dropbtn"></a></i>
+        <i><a class="pi pi-user text-decoration-none dropbtn" ></a></i>
         <div class="dropdown-content">
           <ng-container *ngIf="isLoggedIn(); else showLogin">
             <a routerLink="taikhoan">Tài khoản</a>
@@ -76,30 +126,78 @@
         </div>
       </div>
       
-      <i><a class="pi pi-heart text-decoration-none"></a></i>
-      <i (mouseover)="showShoppingCart()" class="pi pi-shopping-bag text-decoration-none"></i>
-          
-          <div *ngIf="isCartVisible">
-            <p-orderList [value]="shoppingCart.items" [listStyle]="{ height: '25rem' }" header="Shopping Cart">
-              <ng-template let-item pTemplate="item">
-                <div class="flex flex-wrap p-2 align-items-center gap-3">
-                  <img src="{{ item.product.productImage[0] }}" [alt]="item.product.productName" class="w-4rem shadow-2 flex-shrink-0 border-round" />
-                  <div class="flex-1 flex flex-column gap-2">
-                    <span class="font-bold">{{ item.product.productName }}</span>
-                    <div class="flex align-items-center gap-2">
-                      <i class="pi pi-tag text-sm"></i>
-                      <span>{{ item.quantity }}</span>
-                    </div>
-                  </div>
-                  <span class="font-bold text-900">{{ '$' + (item.product.productPrice * item.quantity) }}</span>
+      <i><a class="pi pi-heart text-decoration-none" ></a></i>
+
+      
+
+      <div class="dropdown" (mouseenter)="showShoppingCart()" (mouseleave)="hideShoppingCart()">
+        <i><a
+          class="pi pi-shopping-bag text-decoration-none dropbtn" 
+          id="shoppingCartDropdown" 
+          data-bs-toggle="dropdown" 
+          aria-expanded="false"
+          pBadge 
+          [value]="totalQuantity.toString()"
+          severity="warning"
+          routerLink="chitietdonhang"
+          ></a>
+        </i>
+
+        
+        <div *ngIf="isCartVisible" class="dropdown-menu dropdown-menu-right" aria-labelledby="shoppingCartDropdown" style="width: 340px;">
+      
+          <div *ngIf="shoppingCart && shoppingCart.items">
+            <div class="mb-3" *ngFor="let item of shoppingCart.items">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img [src]="'http://localhost:3000' + item.product.productImage[0]" [alt]="item.product.productName" class="w-100 h-60" />
                 </div>
-              </ng-template>
-            </p-orderList>
-          
-            <div *ngIf="!shoppingCart || shoppingCart.items.length === 0">
-              <p>Your shopping cart is empty.</p>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <b class="card-title" style="font-size: 13px;">{{ item.product.productName }}</b>
+                    <p class="card-text" style="font-size: 12px;">
+                      Số lượng: {{ item.quantity}}
+                    </p>
+                    <p class="card-text"style="font-size: 15px;">
+                      Giá sản phẩm: <span style="color: #CC7F45;">{{ item.product.productPrice | number:'1.0-2'}} đ</span> 
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <hr style="border-top: 1px solid #CCC;">
+            </div>
+            <div *ngIf="shoppingCart.items.length > 0">
+              <div class="row mb-2 px-3">
+                <div class="col">
+                  <b>Tổng Tiền:</b>
+                </div>
+                <div class="col text-end">
+                  <p class="card-text">
+                    <strong>{{shoppingCart.totalAmount | number:'1.0-2'}} đ</strong>
+                  </p>
+                </div>
+              </div>
+            
+              <div class="row mt-3">
+                <div class="col-md-12 text-center">
+                  <button class="btn col-md-11" style="background-color: #CC7F45; color:aliceblue;" routerLink="thanhtoan">Thanh Toán</button>
+                </div>
+              </div>
+            </div>
+
+            <div *ngIf="!shoppingCart || !shoppingCart.items || shoppingCart.items.length === 0">
+              <div class="d-flex flex-column align-items-center justify-content-center p-2">
+                  <i class="pi pi-shopping-bag" style="font-size: 2rem"></i>
+                  <p style="font-size: 12px;">Không có sản phẩm nào trong giỏ hàng của bạn.</p>
+              </div>
             </div>
           </div>
+        </div>
+        </div>
+      
+      
+      
+      
 
     </form>
   </div>
