--- a/fontend/src/app/user/chitietdonhang/chitietdonhang.component.html
+++ b/fontend/src/app/user/chitietdonhang/chitietdonhang.component.html
@@ -1,5 +1,29 @@
+<div class="header">
+  <div class="container" style="padding-top: 50px; text-align: center;">
+      <nav aria-label="breadcrumb" style="display: inline-block;">
+          <h2 style=" color: #CC7F45;">Đơn Hàng</h2>
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+            <li class="breadcrumb-item" style=" color: #CC7F45;" >Đơn Hàng</li>
+          </ol>
+      </nav>
+      
+      <p-carousel [value]="subCategories" [numVisible]="4" [numScroll]="1" [responsiveOptions]="responsiveOptions">
+          <ng-template let-subCategories pTemplate="item">
+              <a class="m-2 text-center py-3 px-5 category-item">
+                  <div class="mb-1 custom-img">
+                      <img class="" [src]="subCategories.imageUrl" [alt]="subCategories.title">
+                  </div>
+                  <div>
+                      <p class="mb-1 mt-3">{{ subCategories.title }}</p>
+                  </div>
+              </a>
+          </ng-template>
+      </p-carousel>
+  </div>
+</div>
 
-<div class="row container mb-5">
+<div class="row mb-5 mt-5 d-flex flex-column align-items-center justify-content-center ">
     <div *ngIf="shoppingCart && shoppingCart.items && shoppingCart.items.length > 0">
         <div class="col-md-9 mx-auto">
             <table class="table table-bordered">
@@ -47,7 +71,7 @@
     
 </div>
 <div *ngIf="!shoppingCart || !shoppingCart.items || shoppingCart.items.length === 0">
-    <div class="d-flex flex-column align-items-center justify-content-center">
+    <div class="d-flex flex-column align-items-center justify-content-center mb-8 mt-5">
         <i class="pi pi-shopping-bag" style="font-size: 2.5rem"></i>
         <p>Không có sản phẩm nào trong giỏ hàng của bạn.</p>
       </div>
