--- a/fontend/src/app/user/chitietsanpham/chitietsanpham.component.css
+++ b/fontend/src/app/user/chitietsanpham/chitietsanpham.component.css
@@ -1,3 +1,33 @@
+.gioithieu .container{
+  max-width: 1400px;
+}
+.header{
+  background: url('../../../assets/img/nền.png') center/cover;
+  text-align: center;
+}
+.header .container{
+  max-width:1000px !important;
+}
+.category-item {
+  
+  max-width: 174px; 
+}
+
+.custom-img img{
+  border-radius: 50% !important;
+  max-width: 174px; 
+}
+a{
+text-decoration: none;
+color:#000;  
+}
+.category-item:hover .custom-img img {
+transform: translateY(-15px);
+} 
+.category-item:hover p {
+color: #CC7F45; 
+}  
+
 .navigation {
     display: flex;
   }
