--- a/fontend/src/app/user/thanhtoan/thanhtoan.component.html
+++ b/fontend/src/app/user/thanhtoan/thanhtoan.component.html
@@ -1,9 +1,74 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-8 col-12">
+        <div class="col-lg-8 col-12" >
+            <h5>Thông tin nhận hàng</h5>
 
-        </div>
-        <div class="col-lg-4 col-12">
+            <div >
+                <button (click)="showDialog()" icon="pi pi-external-link" class="btn" style=" background-color: #CC7F45; color: aliceblue;">Thêm địa chỉ</button>
+                <p></p>
+               
+                <div *ngIf="contactInfo" class="border border-warning p-3 rounded ">
+                <p><strong>Họ và Tên:</strong> {{ contactInfo.fullName }}</p>
+                <p><strong>Địa chỉ:</strong> {{ contactInfo.address }}, {{ contactInfo.ward }}, {{ contactInfo.district }}, {{ contactInfo.province }}, {{ contactInfo.country }}</p>
+                <p><strong>Số điện thoại:</strong> {{ contactInfo.phone }}</p>
+              </div>
+              <div *ngIf="!contactInfo">
+                <p>No contact information available.</p>
+              </div>
+              </div>              
+        <p-dialog header="THÊM ĐỊA CHỈ MỚI" [(visible)]="visible" [modal]="true" [style]="{ width: '60vw' }" [draggable]="false" [resizable]="false">
+            <form [formGroup]="addressForm" (ngSubmit)="onSubmit()" class="container mt-3" *ngIf="contactInfo">
+                    <div class="row">
+                        <div class="col-md-12 mt-3">
+                        <input type="text" id="fullName" formControlName="fullName" [(ngModel)]="contactInfo.fullName" class="form-control" placeholder="Họ và tên">
+                        </div>
+                        <div class="col-md-12 mt-3">
+                        <input type="text" id="phone" formControlName="phone" [(ngModel)]="contactInfo.phone" class="form-control" placeholder="Số điện thoại">
+                        </div>
+                        <div class="col-md-12 mt-3">
+                        <input type="text" id="address" formControlName="address" [(ngModel)]="contactInfo.address" class="form-control" placeholder="Địa chỉ">
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-md-4 mt-3">
+                        <select id="province" formControlName="province" [(ngModel)]="selectedProvince" (change)="onProvinceChange()" class="form-control">
+                            <option value="">Chọn Tỉnh/Thành phố</option>
+                            <option *ngFor="let province of provinces" [value]="province.code">{{ province.name }}</option>
+                        </select>
+                        </div>
+                        <div class="col-md-4 mt-3" [ngClass]="{ 'faded': !provinceSelected }">
+                        <select id="district" formControlName="district" [(ngModel)]="selectedDistrict" (change)="onDistrictChange()" class="form-control">
+                            <option value="">Chọn Quận/Huyện</option>
+                            <option *ngFor="let district of districts" [value]="district.code">{{ district.name }}</option>
+                        </select>
+                        </div>
+                        <div class="col-md-4 mt-3" [ngClass]="{ 'faded': !districtSelected }">
+                        <select id="ward" formControlName="ward" [(ngModel)]="selectedWard" class="form-control">
+                            <option value="">Chọn Phường/Xã</option>
+                            <option *ngFor="let ward of wards" [value]="ward.name">{{ ward.name }}</option>
+                        </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 mt-3">
+                          <input type="text" id="zipCode" formControlName="zipCode" [(ngModel)]="contactInfo.zipCode" class="form-control" placeholder="Mã zip">
+                        </div>
+                        <div class="col-md-12 mt-3">
+                          <div class="form-check">
+                            <input type="radio" id="isDefault" formControlName="isDefault" [(ngModel)]="contactInfo.isDefault" class="form-check-input">
+                            <label for="isDefault" class="form-check-label">Đặt là địa chỉ mặc định?</label>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mt-3">
+                          <button type="submit" class="btn  col-md-12" style=" background-color: #CC7F45;
+                          color: aliceblue;">Submit</button>
+                        </div>
+                      </div>
+            </form>
+        </p-dialog>
+</div>
+        <div class="col-lg-4 col-12" style="border-left: 2px solid #dfdcdc; background-color: #dfdcdc;">
             <h5>Đơn hàng</h5>
             <hr>
             <div *ngFor="let item of shoppingCart.items">
@@ -33,8 +98,10 @@
                 <p class="ml-auto">{{shoppingCart.totalAmount | number:'1.0-2'}}₫</p>
             </div>
             <div class="d-flex align-items-center" *ngIf="shoppingCart.items.length > 0" >
-                <a>Quay về giỏ hàng</a>
-                <button class="btn ml-auto custom-button1" style="background-color :#357ebd; color: aliceblue;">Đặt Hàng</button>
+                <a style="color:#357ebd" class="pi pi-angle-left" routerLink="/user/chitietdonhang">Quay về giỏ hàng</a>
+                <button  (click)="confirm1($event)" class="btn ml-auto custom-button1" style="background-color :#357ebd; color: aliceblue;">Đặt Hàng</button>
+                <p-toast></p-toast>
+                <p-confirmDialog></p-confirmDialog>
             </div>
             
         </div>
